# jemalloc-haskell

./: ChangeLog.md  LICENSE  README.md  jemalloc-haskell.cabal
Data/ByteString/: Jemalloc.hs
Foreign/Marshall/: Jemalloc.hs
bench/: Bench.hs  GHCAlloc.hs  Jemalloc.hs  Malloc.hs  bench.sh  jemalloc-haskell-bench.cabal
