name:                jemalloc-haskell-bench
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable jemalloc
  main-is:             Jemalloc.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                    ,  bytestring >= 0.9 && < 0.11
                    ,  async

  hs-source-dirs:      ../, ./
  default-language:    Haskell2010

  pkgconfig-depends:   jemalloc
  ghc-options:         -O2 -threaded -rtsopts

executable ghc-alloc
  main-is:             GHCAlloc.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                    ,  bytestring >= 0.9 && < 0.11
                    ,  async

  hs-source-dirs:      ../, ./
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts

executable malloc
  main-is:             Malloc.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                    ,  bytestring >= 0.9 && < 0.11
                    ,  async

  hs-source-dirs:      ../, ./
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts
